--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,18 @@
 </head>
 <body>
     <p>Welcome to chat</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+
+        socket.on('connect', () => {
+            console.log('connected');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('disconnected');
+        });
+    </script>
+
 </body>
 </html>
