--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,7 @@
 <body>
     <p>Welcome to chat</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-
-        socket.on('connect', () => {
-            console.log('connected');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('disconnected');
-        });
-    </script>
+    <script src="/js/index.js"></script>
 
 </body>
 </html>
