--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,18 @@
 </head>
 <body>
     <p>Welcome to chat</p>
+
+    <ol id="messages">
+
+    </ol>
+    
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Napisz wiadomość"/>
+        <button>Send</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.2.1.min.js"></script>
     <script src="/js/index.js"></script>
 
 </body>
