--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
     <ol id="messages">
 
     </ol>
-    
+
     <form id="message-form">
         <input name="message" type="text" placeholder="Napisz wiadomość"/>
         <button>Send</button>
     </form>
 
+    <button id="send-location">Wyslij lokalizację</button>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
     <script src="/js/index.js"></script>
