--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,39 @@
 
     </div>
 
+    <script id="message-template" type="text/template">
+        <p>
+            <li class="message">
+                <div class="message__title">
+                    <h4>{{from}}</h4>
+                    <span>{{createdAt}}</span>
+                </div>
+                <div class="message__body">
+                    {{text}}
+                </div>
+            </li>
+        </p>
+    </script>
+
+    <script id="location-message-template" type="text/template">
+        <p>
+            <li class="message">
+                <div class="message__title">
+                    <h4>{{from}}</h4>
+                    <span>{{createdAt}}</span>
+                </div>
+                <p>
+                    <a href="{{url}}" target="_blank">My location</a>
+                </p>
+            </li>
+        </p>
+    </script>
+
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.2.1.min.js"></script>
     <script src="/js/libs/moment.min.js"></script>
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
 
 </body>
